# baileys_ex

./: .credo.exs  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  LICENSE  NOTICE  README.md  mix.exs
.claude/agents/: batch-worker.md  orchestrator.md  phase-worker.md
.github/workflows/: ci.yml  parity-internal.yml
dev/implementation_plan/: 00-overview.md  01-foundation.md  02-crypto-nif.md  03-protocol-layer.md  04-noise-protocol.md  05-signal-protocol.md  06-connection.md  07-authentication.md  08-messaging.md  09-media.md  10-features.md  11-advanced-features.md  12-polish.md  13-parity-testing.md  14-parity-gaps.md  15-persistence-architecture.md  16-signal-store-transaction-redesign.md  17-rc13-upstream-refresh.md  ANTIPATTERNS.md  CLAUDE.md  GAP_ANALYSIS.md  PROGRESS.md  documentation-system.md  dry-audit.md  elixir-antipatterns.md
dev/parity/: README.md  baileys-js-vs-baileys-ex-surface-matrix.md
dev/scripts/: generate_syncd_vectors.mjs  generate_wam_definitions.mjs  regenerate_parity_fixtures.sh  run_live_validation.exs  run_parity_suite.sh
examples/: echo-bot.md  echo_bot.exs
guides/: authentication.md  custom-persistence.md  getting-started.md  groups.md  media.md  receiving-messages.md  sending-messages.md
lib/: baileys_ex.ex
lib/baileys_ex/: application.ex  (+5 more)
native/baileys_nif/: Cargo.toml
native/baileys_nif/src/: error.rs  lib.rs  noise.rs  xeddsa.rs
test/: baileys_ex_test.exs  test_helper.exs
test_helpers/: deterministic_auth.ex  fake_thumbnail.ex  message_signal_helpers.ex  telemetry_helpers.ex
user_docs/: README.md  glossary.md
(+266 files in other folders)
